@@ -68,9 +68,14 @@ void metaserver_init()
     }
     sock.sin_family = AF_INET;
     sock.sin_port = htons(settings.meta_port);
+#ifndef __FreeBSD__
+    /* Freebsd seems to have a problem in that the sendto in metaserver_update will
+     * fail on a connected socket.  So don't connect the socket.
+     */
     if (connect(metafd, &sock, sizeof(sock))<0) {
 	LOG(llevDebug,"metaserver_init: Unable to connect to metaserver, err %d\n", errno);
     }
+#endif
     /* No hostname specified, so lets try to figure one out */
     if (settings.meta_host[0]==0) {
 	char hostname[MAX_BUF], domain[MAX_BUF];
